--- a/stock_music_c3/package.json
+++ b/stock_music_c3/package.json
@@ -22,7 +22,9 @@
     "react-addons": "^0.9.0",
     "reactify": "^0.15.2",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.1.1"
+    "watchify": "^2.1.1",
+    "express": "~4.11.1",
+    "st": "~0.5.2"
   },
   "dependencies": {
     "react": "^0.12.0",
